--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "tercerdesafio",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Tercer Desafio BackEnd",
+  "main": "productManager.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "Verushka Fernandez",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^3.0.3"
   }
 }
